# kanjivg-to-png

./: Cargo.toml  LICENSE  Makefile  README.md
scripts/: get-kanjivg-data.sh  lookup.py  lookup_test.py  main.py
src/: background.rs  main.rs  root.rs  stroke.rs  viewbox.rs
